refactored to controllerAs syntax

--- a/partials/about.html
+++ b/partials/about.html
@@ -1,5 +1,6 @@
 <div class="row">
     <div class="col-lg-12">
         <h1 class="page-header">About Us</h1>
+        <p>{{about.content}}</p>
     </div>
 </div>
