--- a/partials/login.html
+++ b/partials/login.html
@@ -1,4 +1,4 @@
-<form data-ng-submit="login()">
+<form data-ng-submit="login.login()">
     <div class="container" style="margin-top:30px">
         <div class="col-md-4 col-md-offset-4">
             <div class="panel panel-default">
@@ -10,13 +10,13 @@
                 <div class="panel-body">
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="text" class="form-control" autofocus data-ng-model="input.email">
+                        <input type="text" class="form-control" autofocus data-ng-model="login.input.email">
                     </div>
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="password" class="form-control" data-ng-model="input.password">
+                        <input type="password" class="form-control" data-ng-model="login.input.password">
                     </div>
-                    <button class="btn btn-sm btn-primary" data-ng-click="">Login</button>
+                    <button type='submit' class="btn btn-sm btn-primary">Login</button>
                 </div>
             </div>
         </div>
