--- a/partials/register.html
+++ b/partials/register.html
@@ -1,4 +1,4 @@
-<form data-ng-submit="register()">
+<form data-ng-submit="register.register()">
     <div class="container" style="margin-top:30px">
         <div class="col-md-4 col-md-offset-4">
             <div class="panel panel-default">
@@ -10,17 +10,17 @@
                 <div class="panel-body">
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="text" class="form-control" autofocus data-ng-model="input.email">
+                        <input type="text" class="form-control" autofocus data-ng-model="register.input.email">
                     </div>
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="password" class="form-control" data-ng-model="input.password">
+                        <input type="password" class="form-control" data-ng-model="register.input.password">
                     </div>
                     <div class="form-group">
                         <label>Confirm Password</label>
-                        <input type="password" class="form-control" data-ng-model="input.confirmation">
+                        <input type="password" class="form-control" data-ng-model="register.input.confirmation">
                     </div>
-                    <button class="btn btn-sm btn-primary" data-ng-click="">Register</button>
+                    <button type='submit' class="btn btn-sm btn-primary">Register</button>
                 </div>
             </div>
         </div>
